Development Portal (2016-10-26 shi)
==============================
Fixed margins for Search box


Development Portal (2016-09-01 shi)
==============================
Added maximum width for table titles (activity, list) for large numbers


Development Portal (2016-06-23 shi)
==============================
Clean up Tips section
Remove email contact
Added vimeo video
Minor CSS changes
Changed text on Discover button
Updated footer links sitewide, includes translations
Updated hover states of graphs for publisher and recipient pages
Height and line-height fix for graphs of different tallness


Development Portal (2016-06-22 shi)
==============================
Updated all email contacts to support@iatistandard.org sitewide
Minor CSS fix
Isolate download buttons
Remove max-width of navigation buttons for consistency
Clean up overall layout and footer


Development Portal (2016-06-16 shi)
==============================
Changed url to link in footer


Development Portal (2016-06-15 shi)
==============================
Replace site footer with new layout, info and links
Added translations for new footer
Contact email changed site-wide to queries@d-portal.org


Development Portal (2016-06-14 shi)
==============================
Fixed table CSS for Print-friendly
Fixed portal name vertical align with flag (min)
Search layout redesign


Development Portal (2016-05-31 shi)
==============================
Change layout of Search button
Updated text on search button
Add translations for search button


Development Portal (2016-01-30 shi)
==============================
Added portal link on individual Dash profiles


Development Portal (2016-01-29 shi)
==============================
Fixed all tables layout for better hover states
Added border lines to Print Friendly tables
Fixed Activity State section in Dash
Minor text edit in Dash 


Development Portal (2016-01-28 shi)
==============================
Added new data quality alert for no active projects
Translations added for alert