@@ -913,7 +913,7 @@ IATI出版社
 年
 
 #search_view_txt
-您搜索：
+DISCOVER
 
 #search_text_txt
 文本搜索
