@@ -913,7 +913,7 @@ Publisher
 Year Range
 
 #search_view_txt
-Discover:
+DISCOVER
 
 #search_text_txt
 Text Search
