@@ -915,7 +915,7 @@ Editeur
 An
 
 #search_view_txt
-Vous avez cherché:
+DISCOVER
 
 #search_text_txt
 Recherche texte
