@@ -912,7 +912,7 @@ IATI प्रकाशक
 साल
 
 #search_view_txt
-आप खोज:
+DISCOVER
 
 #search_text_txt
 पाठ्य खोज
