@@ -915,7 +915,7 @@ IATI出版
 年
 
 #search_view_txt
-検索結果：
+DISCOVER
 
 #search_text_txt
 テキスト検索
