@@ -912,7 +912,7 @@ Editor
 Año
 
 #search_view_txt
-Ha buscado:
+DISCOVER
 
 #search_text_txt
 Búsqueda de texto
