@@ -9,12 +9,12 @@
 {view_head}
 <style>.crumb_wrap{display:none;}#background_image{url('/art/mexico_background_image.jpg')};{css}</style>
 {beige}
-{main_head}
+{main_head_search}
 {view_search_test}
 {view_tail}
-
+			
+			
 #view_search_test
-
 <div id="view_search_test">
 	<div class="search_filter">
 		<div class="search_wrap">
