@@ -1,6 +1,11 @@
 Development Portal (2016-10-26 shi)
 ==============================
 Fixed margins for Search box
+Restyled Search page, layout and font stylings
+Fixed max and min main pages for Search
+Added icons to results page
+Added DISCOVER branding to main pages and results page
+Fixed translations for DISCOVER
 
 
 Development Portal (2016-09-01 shi)
